<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_margin"
        android:layout_marginVertical="@dimen/margin"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="@dimen/corner_radius">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin">

            <ImageView
                android:id="@+id/movie_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:src="@drawable/movie_sample_pic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:gravity="center"
                android:hint="@string/movie_title_hint"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="@id/movie_icon"
                app:layout_constraintStart_toStartOf="@id/movie_icon"
                app:layout_constraintTop_toBottomOf="@id/movie_icon" />

            <TextView
                android:id="@+id/movie_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:gravity="center"
                android:hint="@string/release_date_hint"
                android:layout_marginStart="@dimen/small_margin"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/movie_icon"
                app:layout_constraintTop_toBottomOf="@id/movie_title" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_star_rate_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/movie_rating"
                app:layout_constraintTop_toBottomOf="@id/movie_title" />

            <TextView
                android:id="@+id/movie_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:textAlignment="textEnd"
                android:hint="@string/vote_average_hint"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/movie_icon"
                app:layout_constraintTop_toBottomOf="@id/movie_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</FrameLayout>
